apps/openproject/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openproject
  namespace: openproject
spec:
  selector:
    app: openproject
  ports:
    - name: http
      port: 80
      targetPort: http
