apps/openproject/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openproject
  namespace: openproject
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jira.ryandev.ru`)
      kind: Rule
      services:
        - name: openproject
          port: 80
  tls:
    secretName: jira-ryandev-ru-tls
